tests/codegen/fail/scalar/derive_input/attr_transparent_multiple_named_fields.rs
use juniper::graphql_scalar;

#[graphql_scalar]
#[graphql(transparent)]
struct Scalar {
    id: i32,
    another: i32,
}

fn main() {}
